fixing alignment issue in detail page left panel. also added css for link

--- a/src/main/webapp/assets/css/custom.css
+++ b/src/main/webapp/assets/css/custom.css
@@ -50,54 +50,12 @@ ng-view{
 .no-padding{
 	padding:0;
 }
-.also-by-wrapper{
-	font-size: 13px; /* Approximation due to font substitution */
-	font-weight: 400;
-	text-align: left;
-	margin-top:20px;
-}
+
 .mce-flow-layout
 {
 	height: 0px !important
 }
-.also-by-content-wrapper{
-	margin-top:10px;
-}
-.also-by-content a{
-	color:#3CC047  !important;
-}
-.also-by-content a:hover{
-	color:#00af50 !important;
-}
-.sec-line{
-	font-size:13px;
-	margin-top:5px;
-}
-.also-by-head{
-	color: #4C4C4C;
-	font-size: 15px;
-	font-weight: 400;
-	line-height: 24px;
-	padding: 5px;
-	padding-left: 10px;
-	background-color: #DAD9D9;
-}
-.also-by-wrapper .also-by-content{
-	color:  #848484;
-	font-size: 14px; /* Approximation due to font substitution */
-	font-weight: 400;
-	line-height: 17px; /* Approximation due to font substitution */
-	text-align: left;
-	border-style:solid;
-	border-width:0px;
-	border-color:#cfcfcf;
-	border-bottom-width:1px;
-	padding-top: 10px;
-	padding-bottom: 10px;
-}
-.also-by-wrapper .also-by-content:last-child{
-	border-width:0px;
-}
+
 .ask-question,.share-tips,.submit-article,.give-feedback,.send-message, .rate-review{
 	display: block;
 	background: #fff;
